<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity"
              android:orientation="vertical">

    <TextView
            android:id="@+id/main_headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_headerText"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

    <TextView
            android:id="@+id/main_loggedInAsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="10dp"/>

    <Button
            android:id="@+id/main_mergeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_mergeButtonText"
            android:onClick="main_mergeButtonClicked"/>

    <Button
            android:id="@+id/main_splitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_splitButtonText"
            android:onClick="main_splitButtonClicked"/>

    <Button
        android:id="@+id/main_viewLogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:onClick="main_viewLogButtonClicked"
        android:text="History" />

    <Button
            android:id="@+id/main_loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_loginButtonText"
            android:onClick="main_loginButtonClicked"/>
</LinearLayout>