<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".SplitActivity"
              android:orientation="vertical">

    <TextView
            android:id="@+id/split_headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_headerText"
            android:layout_gravity="center"
            android:textSize="16sp"/>

    <TextView
            android:id="@+id/split_loggedInAsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/split_chooseFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/chooseFileButtonText" />

        <TextView
            android:id="@+id/split_chooseFileTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:scrollHorizontally="true"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/split_pageRangeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/split_pageRangeText" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/split_pdfs_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start" />

            <EditText
                android:id="@+id/split_start_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="End" />

            <EditText
                android:id="@+id/split_end_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <TableRow>

            <RadioButton
                android:id="@+id/split_splitIntoNFilesRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/split_splitIntoNFilesRBText" />

            <EditText
                    android:id="@+id/split_splitIntoNFilesEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:inputType="number"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/split_splitIntoNFilesText"
                    android:textSize="18sp"/>

           <!-- <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_help"/>-->
        </TableRow>

        <TableRow
                android:layout_marginTop="5dp">

            <RadioButton
                    android:id="@+id/split_splitEveryNPagesRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/split_splitEveryNPagesRBText"/>

            <EditText
                    android:id="@+id/split_splitEveryNPagesEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:inputType="number"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/split_splitEveryNPagesText"
                    android:textSize="18sp"/>
        </TableRow>
    </TableLayout>

    <!--<EditText
            android:id="@+id/split_numberOfNewFilesEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/split_numberOfNewFiles"
            android:inputType="number"
            android:layout_marginTop="15dp"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/split_splitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_splitButtonText" />

    </LinearLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <TableRow>

        </TableRow>
    </TableLayout>

</LinearLayout>